<resources>
    <string name="app_name">Trivia Quiz</string>
    <string name="welcome_message">Welcome to Trivia App</string>
    <string name="exit">Exit</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="app_status">Loading Trivia</string>
    <string name="app_ready">Trivia Ready</string>
    <string name="no_internet">No Internet connexion</string>
    <string name="app_questions">Questions</string>
    <string name="image_status">Loading Image</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="time_over">Time over</string>
    <string name="stats">Stats</string>
    <string name="trivia_status">Trivia Status</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="congratulations">Congratulations! You got all the answers correct.</string>
    <string name="try_again">Try Again</string>
    <string name="try_again_message">Try again and see is you can get all the correct answers!</string>
</resources>
