<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.triviaquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:text="@string/welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:height="50dp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:lines="@integer/two_lines"
                android:minLines="@integer/two_lines"
                android:width="100dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="314dp" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:id="@+id/panel">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="184dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/trivia"
                        android:visibility="gone"
                        android:id="@+id/appLogo" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/appStatusLoader"
                        android:layout_weight="0.52"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="52dp">

                    <TextView
                        android:text="@string/app_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/appStatusText"
                        android:layout_weight="0.23"
                        android:textAlignment="center"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exit"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start"
                    android:layout_weight="1"
                    android:text="@string/start_trivia"
                    android:enabled="false" />
            </LinearLayout>
        </TableRow>
    </LinearLayout>
</RelativeLayout>
