<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.triviaquiz.Stats">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_margin="@dimen/mini_pad">

            <TextView
                android:text="@string/trivia_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView14"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="89dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/correct_answers"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:id="@+id/textView15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="39dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/progressValue"
                            android:textColor="@android:color/black"
                            android:fontFamily="sans-serif"
                            android:foregroundGravity="center_vertical|center_horizontal" />

                        <ProgressBar
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/progressBar"
                            android:max="100"
                            android:progress="0" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="247dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tryMessage"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/replay"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goHome"
                android:layout_alignBaseline="@+id/replay"
                android:layout_alignBottom="@+id/replay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
