<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.triviaquiz.StartTrivia">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_pad">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp">

                <TextView
                    android:layout_height="match_parent"
                    android:id="@+id/questionNo"
                    android:layout_alignParentTop="true"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="?attr/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:padding="@dimen/mini_pad"
                    android:layout_width="wrap_content"
                    android:width="50dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/timeLeft"
                    android:gravity="right|center_vertical"
                    android:padding="@dimen/mini_pad"
                    android:background="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:width="160dp" />
            </RelativeLayout>
        </TableRow>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/no_image"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:id="@+id/noImage"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageStatusBar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/image_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:id="@+id/imageStatus"
                android:layout_below="@+id/imageStatusBar"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="0.61">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/question"
                android:textColor="@android:color/black"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="138dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/options" />
            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:text="@string/quit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/quit"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/next"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
